@@ -5,7 +5,6 @@
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="blockComment" VALUE="&amp;&amp;" />
-		<PROPERTY NAME="noWordSep" VALUE="_" />
 	</PROPS>
 
 	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
