@@ -11,7 +11,8 @@
 		<PROPERTY NAME="indentOpenBrackets" VALUE="(" />
 		<PROPERTY NAME="indentCloseBrackets" VALUE=")" />
 	</PROPS>
-	<RULES IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
+	<RULES IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE"
+		NO_WORD_SEP="_-+?:">
 		<SPAN TYPE="COMMENT1">
 			<BEGIN>#|</BEGIN>
 			<END>|#</END>
